deps/v8/test/message/fail/modules-duplicate-export2.out
*%(basename)s:8: SyntaxError: Duplicate export of 'x'
export {x};
        ^
SyntaxError: Duplicate export of 'x'

